# quotabar

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  Justfile  LICENSE  PLAN.md  README.md  flake.nix  shell.nix
src/: cache.rs  config.rs  main.rs  mock.rs  models.rs  pace.rs  popup.css  popup.rs
src/providers/: claude.rs  codex.rs  mod.rs
